hashicorp-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: vault
spec:
  replicas: 3
  selector:
    matchLabels:
      component: vault
  template:
    metadata:
      labels:
        name: vault
        component: vault
    spec:
      containers:
        - name: vault
          image: docker-registry.default.svc:5000/be-pnu-dev-vault/vault:0.9.1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8200
              protocol: TCP
            - containerPort: 8201
              protocol: TCP
          resources:
            requests:
              memory: 256Mi
              cpu: 50m
            limits:
              memory: 512Mi
              cpu: 200m
#          readinessProbe:
#            timeoutSeconds: 5
#            initialDelaySeconds: 20
#            httpGet:
#              path: "/v1/sys/init"
#              port: 8200
#              scheme: HTTP
#          livenessProbe:
#            timeoutSeconds: 5
#            initialDelaySeconds: 30
#            httpGet:
#              path: "/v1/sys/init"
#              port: 8200
#              scheme: HTTP
          securityContext:
            capabilities:
              add: [ "IPC_LOCK" ]
          command: [ "/docker-entrypoint.sh" ]
          args: [ "vault", "server", "-config=/vault/config/vault.json" ]
          volumeMounts:
            - name: vault-template
              mountPath: "/vault/template"
            - name: vault-config
              mountPath: "/vault/config"
      volumes:
        - name: vault-template
          configMap:
            name: vault-template
        - name: vault-config
          emptyDir: {}
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: vault-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      component: vault-ui
  template:
    metadata:
      labels:
        name: vault-ui
        component: vault-ui
    spec:
      containers:
        - name: vault
          image: docker-registry.default.svc:5000/be-pnu-dev-vault/vault-ui:2.4.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
              protocol: TCP
          resources:
            requests:
              memory: 256Mi
              cpu: 50m
            limits:
              memory: 512Mi
              cpu: 100m
          readinessProbe:
            timeoutSeconds: 5
            initialDelaySeconds: 20
            httpGet:
              path: "/"
              port: 8000
              scheme: HTTP
          livenessProbe:
            timeoutSeconds: 5
            initialDelaySeconds: 30
            httpGet:
              path: "/"
              port: 8000
              scheme: HTTP
---
