hashicorp-statefulset.yaml
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: consul
spec:
  serviceName: consul-hs
  replicas: 3
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: consul
        component: consul
    spec:
      terminationGracePeriodSeconds: 10
#      affinity:
#        podAntiAffinity:
#          requiredDuringSchedulingIgnoredDuringExecution:
#            - labelSelector:
#                matchExpressions:
#                  - key: component
#                    operator: In
#                    values:
#                    - consul
#              topologyKey: "kubernetes.io/hostname"
      containers:
        - name: consul
          image: docker-registry.default.svc:5000/be-pnu-dev-vault/consul:1.0.2.0
          imagePullPolicy: Always
          command: [ "/docker-entrypoint.sh" ]
          args: [ "consul", "agent", "-config-file=/consul/config/consul.json" ]
          ports:
            - containerPort: 8300
              protocol: TCP
            - containerPort: 8301
              protocol: TCP
            - containerPort: 8301
              protocol: UDP
            - containerPort: 8302
              protocol: TCP
            - containerPort: 8302
              protocol: UDP
            - containerPort: 8500
              protocol: TCP
            - containerPort: 8501
              protocol: TCP
            - containerPort: 8600
              protocol: TCP
            - containerPort: 8600
              protocol: UDP
          resources:
            requests:
              memory: 256Mi
              cpu: 50m
            limits:
              memory: 512Mi
              cpu: 200m
          readinessProbe:
            periodSeconds: 5
            failureThreshold: 12
            timeoutSeconds: 3
            exec:
              command: ["/bin/sh", "-e", "/ready-check.sh"]
          livenessProbe:
            initialDelaySeconds: 300
            periodSeconds: 30
            failureThreshold: 10
            timeoutSeconds: 10
            exec:
              command: ["/bin/sh", "-e", "/health-check.sh"]
          lifecycle:
            preStop:
              exec:
                command: [ "/bin/sh", "-c", "consul leave" ]
          volumeMounts:
            - name: consul-config
              mountPath: "/consul/config"
            - name: consul-data
              mountPath: "/consul/data"
      volumes:
        - name: consul-config
          configMap:
            name: consul-config
        - name: consul-data
          emptyDir: {}
---
